--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -98,12 +98,12 @@ add_subdirectory(lib)
 add_subdirectory(app)
 add_subdirectory(importer)
 add_subdirectory(part)
-add_subdirectory(tests)
+macro_optional_add_subdirectory(tests)
 add_subdirectory(icons)
 add_subdirectory(images)
 add_subdirectory(cursors)
 add_subdirectory(color-schemes)
-add_subdirectory(doc)
+macro_optional_add_subdirectory(doc)
 
 configure_file(config-gwenview.h.cmake ${CMAKE_CURRENT_BINARY_DIR}/config-gwenview.h)
 
