--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,4 +2,4 @@ add_subdirectory(auto)
 add_subdirectory(manual)
 
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND} --verbose)
-add_dependencies(check buildtests)
+#add_dependencies(check buildtests)
