Fix linking with exiv2

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ macro_log_feature(PNG_FOUND "libpng" "PNG image manipulation support" "http://ww
 find_package(exiv2)
 macro_log_feature(exiv2_FOUND "exiv2" "Image metadata support" "http://www.exiv2.org" TRUE "0.27")
 if(exiv2_FOUND)
-    set(EXIV2_LIBRARIES exiv2lib)
+    set(EXIV2_LIBRARIES exiv2)
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fexceptions")
 endif()
 
